# push-cache

./: CONTRIBUTING.md  Makefile  README.md  agents.md  deployment-push-cache-backend.yaml
.agent/: guidelines.md
.agent/workflows/: feature-development.md
.github/workflows/: backend-docker-publish.yml  backend-release.yml  helm-publish.yaml  helm-release.yaml
backend/: Cargo.toml  Dockerfile
backend/benches/: cache_benchmark.rs  concurrent_benchmark.rs
backend/examples/: populate_kafka.rs
backend/src/: config.rs  consumer.rs  error.rs  kafka_utils.rs  lib.rs  main.rs  model.rs  startup_tools.rs
backend/src/webserver/: mod.rs
backend/test-data/: config-localhost.yaml  populate_kafka.py  requirements.txt
charts/: push-cache-backend-sample.yaml
charts/push-cache-backend/: Chart.yaml  values.yaml
charts/push-cache-backend/configs/: config.yaml
charts/push-cache-backend/templates/: NOTES.txt  _helpers.yaml  authorizationpolicy.yaml  configmap.yaml  deployment.yaml  hpa.yaml  job-schema.yaml  requestauthorization.yaml  service.yaml  serviceaccount.yaml
docs/plans/: rename-to-push-cache.md
docs/specs/: rename-to-push-cache.md
fluxcd-dev/: app-push-cache.yaml  app-ui.yaml  keycloak-push-cache.yaml  virtualservice.yaml
scripts/: load_test.sh  populate-k8s.sh
